[gd_scene load_steps=10 format=3 uid="uid://dkrn7lqlxm65d"]

[ext_resource type="Script" path="res://scenes/levels/level_inside/pot_display.gd" id="1_arl2v"]
[ext_resource type="Texture2D" uid="uid://bteqvbuoixsyj" path="res://assets/ingredients/low_res/berry.png" id="1_sfkc6"]
[ext_resource type="FontFile" uid="uid://bxbjyp5yg4ltc" path="res://assets/tinypixel.otf" id="2_e14kl"]
[ext_resource type="Texture2D" uid="uid://xw1uupw8dnb7" path="res://assets/ingredients/low_res/nut.png" id="3_5o7nj"]
[ext_resource type="Texture2D" uid="uid://chv5mrpylretu" path="res://assets/ingredients/low_res/tofu.png" id="4_5hkii"]
[ext_resource type="Texture2D" uid="uid://cmuunv32frfkc" path="res://assets/ingredients/low_res/carrot.png" id="5_y4u2j"]
[ext_resource type="Texture2D" uid="uid://b1o8bxggpnw41" path="res://assets/ingredients/low_res/pepper.png" id="6_5w4ka"]
[ext_resource type="Texture2D" uid="uid://dqqd4tsernqgo" path="res://assets/ingredients/low_res/mint.png" id="7_bfokj"]

[sub_resource type="LabelSettings" id="LabelSettings_hcd0y"]
font = ExtResource("2_e14kl")
font_size = 30
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)

[node name="PotDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_arl2v")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_sfkc6")
expand_mode = 1
stretch_mode = 4

[node name="BerryLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_hcd0y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_5o7nj")
expand_mode = 1
stretch_mode = 4

[node name="NutLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_hcd0y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_5hkii")
expand_mode = 1
stretch_mode = 4

[node name="TofuLabel" type="Label" parent="HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_hcd0y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_y4u2j")
expand_mode = 1
stretch_mode = 4

[node name="CarrotLabel" type="Label" parent="HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_hcd0y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer5" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer5"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_5w4ka")
expand_mode = 1
stretch_mode = 4

[node name="PepperLabel" type="Label" parent="HBoxContainer/VBoxContainer5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_hcd0y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer6" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer6"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_bfokj")
expand_mode = 1
stretch_mode = 4

[node name="MintLabel" type="Label" parent="HBoxContainer/VBoxContainer6"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_hcd0y")
horizontal_alignment = 1
vertical_alignment = 1
